# popcorn

./: .gitignore  Cargo.toml  GNUmakefile  build.rs  flake.nix  limine.conf  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml  kernel
kernel/src/: allocator.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  request.rs  rsdp.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs
kernel/src/task/: keyboard.rs  mod.rs  simple_executor.rs
kernel/tests/: heap_allocation.rs  should_panic.rs  stack_overflow.rs
ovmf/: ovmf-vars-x86_64.fd
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/task/: executor.rs  keyboard.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
