[package]
name = "popcorn"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.4"
embedded-graphics = "0.8.1"
log = { version = "0.4.17", default-features = false }
spin = "0.10.0"
noto-sans-mono-bitmap = "0.3.1"
conquer-once = { version = "0.4.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false, features = [ "spin_no_std" ] }
